# market-pulse-dash

./: .gitignore  pyproject.toml
data/processed/: master_dataset.parquet  trend_features.parquet
data_pipeline/: 01_fetch_trends.py  02_build_features.py  03_build_master_dataset.py  fetch_trends.py
notebooks/: 01_eda.ipynb  data_preprocessing.ipynb
simulation/: inject_trend_shocks.py
