[project]
name = "market-pulse-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pyarrow>=25.0.0",
    "pytrends>=4.9.2",
    "requests[socks]>=2.34.2",
    "ruff>=0.15.22",
    "urllib3<2.0",
]
